<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <ImageView
        android:id="@+id/imagenPortada"
        android:layout_width="178dp"
        android:layout_height="162dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_edi" />

    <TextView
        android:id="@+id/textPedidosOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:text="@string/Titulo"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenPortada" />

    <TextView
        android:id="@+id/textSaludo"
        style="@style/mensajesColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/Saludo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPedidosOnline" />

    <TextView
        android:id="@+id/textCorreo"
        style="@style/textColor"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="12dp"
        android:text="@string/Correo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSaludo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCorreo" />

    <TextView
        android:id="@+id/textPassword"
        style="@style/textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/Contraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

    <Button
        android:id="@+id/buttonIngresar"
        style="@style/buttonForm"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/Ingresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textConectese"
        style="@style/mensajesColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="24dp"
        android:text="@string/Mensaje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIngresar" />

    <Button
        android:id="@+id/buttonTwitter"
        style="@style/buttonForm"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/Twitter"
        app:layout_constraintEnd_toStartOf="@+id/buttonFacebook"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConectese" />

    <Button
        android:id="@+id/buttonFacebook"
        style="@style/buttonForm"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/blue"
        android:text="@string/Facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConectese" />

    <TextView
        android:id="@+id/textOlvido"
        style="@style/mensajesColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/Olvido"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwitter" />

    <TextView
        android:id="@+id/textRegistrese"
        style="@style/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:text="@string/Registrese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFacebook" />

</androidx.constraintlayout.widget.ConstraintLayout>